project(GSVideoAudio)
cmake_minimum_required(VERSION 3.10)
#include(VideoAudioCapture.h)
find_package(spdlog REQUIRED)
include_directories(/usr/include/spdlog)
include_directories(/usr/include/gstreamer-1.0)
include_directories(/usr/include/glib-2.0)
include_directories(/usr/lib/aarch64-linux-gnu/glib-2.0/include)
add_executable(${PROJECT_NAME} main.cpp VideoAudioCapture.cpp VideoAudioCapture.h VideoAudioOption.h gstBufferManager.h gstBufferManager.cpp gstVideoAudioUtils.hpp)
target_link_libraries(${PROJECT_NAME} gstreamer-1.0 gobject-2.0 glib-2.0 gstapp-1.0 spdlog::spdlog)
